testdata/baselines/reference/submodule/compiler/pathMappingBasedModuleResolution_rootImport_noAliasWithRoot_realRootFile.errors.txt
/root/tsconfig.json(3,9): error TS5102: Option 'baseUrl' has been removed. Please remove it from your configuration.
  Use '"paths": {"*": "./*"}' instead.


==== /root/tsconfig.json (1 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            ~~~~~~~~~
!!! error TS5102: Option 'baseUrl' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use '"paths": {"*": "./*"}' instead.
            "paths": {
                "*": ["./src/*"]
            },
            "allowJs": true,
            "outDir": "bin"
        }
    }
    
==== /root/a.ts (0 errors) ====
    import { foo } from "/foo";
    import { bar } from "/bar";
    
==== /foo.ts (0 errors) ====
    export function foo() {}
    
==== /bar.js (0 errors) ====
    export function bar() {}
    